--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -189,6 +189,140 @@ header{
 }
 
 
+.our-advantages{
+  padding: 43px 0;
+}
+.castum-h4{
+  font-size: rem(30);
+  text-transform: uppercase;
+  position: relative;
+  margin: 20px 0 11px;
+  letter-spacing: 1.2px;
+  span{
+    position: relative;
+    z-index: 2;
+    background-color: #f9f9f9;
+    display: inline-block;
+    padding: 0 29px 0 0;
+  }
+  &:before{
+    content: '';
+    width: 100%;
+    position: absolute;
+    top: 19px;
+    left: 0;
+    height: 1px;
+    background-color: #e2e5ec;
+  }
+}
+
+.wr-slid{
+  width: 578px;
+  position: relative;
+  .bx-pager{
+    position: absolute;
+    left: 0;
+    bottom: 19px;
+    text-align: center;
+    width: 100%;
+  }
+  .bx-pager-item{
+    display: inline-block;
+    margin: 0 5px;
+  }
+}
+.slid-advanteges{
+  width: 100%;
+  background-color: #fff;
+  min-height: 261px;
+  .item{
+    width: 100%;
+  }
+  .descript{
+      padding: 30px 0 0 40px;
+    a{
+      text-transform: uppercase;
+      text-decoration: none;
+      color: #325594;
+      font-size: rem(18);
+      font-family: 'PT Sans Narrow', sans-serif;
+      font-weight: bold;
+    }
+    p{
+      color: #808080;
+      width: 274px;
+      height: 93px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+  .img{
+
+  }
+}
+
+.company-box{
+
+}
+.company{
+  text-align: center;
+  padding: 10px 0;
+}
+.company-item{
+  width: 202px;
+  height: 202px;
+  margin: 0 20px;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: #fff;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  overflow: hidden;
+  opacity: 0.7;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  &:first-child{
+    margin: 0 20px 0 0;
+  }
+  &:last-child{
+    margin: 0 0 0 20px;
+  }
+  img{
+    vertical-align: middle;
+  }
+  a{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    background-color: rgba(255,255,255,0.9);
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+  }
+  &:hover{
+    opacity: 1;
+    a{
+      background-color: transparent;
+    }
+  }
+  .company-icon{
+    position: absolute;
+    top: 9px;
+    right: 4px;
+  }
+}
+
+
+
+
+
 
 //************ ПЛАВНАЯ АНИМАЦИЯ ***********//
 //@include transition(all 0.5s $ease-out-cubic);
