--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,5 +1,6 @@
 
   <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/script.js"></script>
 
 </body>
