--- a/src/template/head.html
+++ b/src/template/head.html
@@ -11,6 +11,9 @@
     <link href='https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 
+    <link rel="stylesheet" href="css/jquery.formstyler.css">
+    <link rel="stylesheet" href="css/ion.rangeSlider.css">
+    <link rel="stylesheet" href="css/ion.rangeSlider.skinHTML5.css">
     <link rel="stylesheet" href="css/style.css">
 
 
