--- a/src/style/partials/sprite.scss
+++ b/src/style/partials/sprite.scss
@@ -18,10 +18,10 @@ $bx-pager-link-hover-offset-x: 0px;
 $bx-pager-link-hover-offset-y: 0px;
 $bx-pager-link-hover-width: 20px;
 $bx-pager-link-hover-height: 20px;
-$bx-pager-link-hover-total-width: 54px;
-$bx-pager-link-hover-total-height: 207px;
+$bx-pager-link-hover-total-width: 81px;
+$bx-pager-link-hover-total-height: 814px;
 $bx-pager-link-hover-image: '../images/sprite.png';
-$bx-pager-link-hover: (0px, 0px, 0px, 0px, 20px, 20px, 54px, 207px, '../images/sprite.png', 'bx-pager-link-hover', );
+$bx-pager-link-hover: (0px, 0px, 0px, 0px, 20px, 20px, 81px, 814px, '../images/sprite.png', 'bx-pager-link-hover', );
 $bx-pager-link-name: 'bx-pager-link';
 $bx-pager-link-x: 0px;
 $bx-pager-link-y: 25px;
@@ -29,10 +29,10 @@ $bx-pager-link-offset-x: 0px;
 $bx-pager-link-offset-y: -25px;
 $bx-pager-link-width: 20px;
 $bx-pager-link-height: 20px;
-$bx-pager-link-total-width: 54px;
-$bx-pager-link-total-height: 207px;
+$bx-pager-link-total-width: 81px;
+$bx-pager-link-total-height: 814px;
 $bx-pager-link-image: '../images/sprite.png';
-$bx-pager-link: (0px, 25px, 0px, -25px, 20px, 20px, 54px, 207px, '../images/sprite.png', 'bx-pager-link', );
+$bx-pager-link: (0px, 25px, 0px, -25px, 20px, 20px, 81px, 814px, '../images/sprite.png', 'bx-pager-link', );
 $company-icon-name: 'company-icon';
 $company-icon-x: 0px;
 $company-icon-y: 50px;
@@ -40,48 +40,147 @@ $company-icon-offset-x: 0px;
 $company-icon-offset-y: -50px;
 $company-icon-width: 54px;
 $company-icon-height: 66px;
-$company-icon-total-width: 54px;
-$company-icon-total-height: 207px;
+$company-icon-total-width: 81px;
+$company-icon-total-height: 814px;
 $company-icon-image: '../images/sprite.png';
-$company-icon: (0px, 50px, 0px, -50px, 54px, 66px, 54px, 207px, '../images/sprite.png', 'company-icon', );
+$company-icon: (0px, 50px, 0px, -50px, 54px, 66px, 81px, 814px, '../images/sprite.png', 'company-icon', );
+$link-ico-name: 'link-ico';
+$link-ico-x: 0px;
+$link-ico-y: 121px;
+$link-ico-offset-x: 0px;
+$link-ico-offset-y: -121px;
+$link-ico-width: 11px;
+$link-ico-height: 19px;
+$link-ico-total-width: 81px;
+$link-ico-total-height: 814px;
+$link-ico-image: '../images/sprite.png';
+$link-ico: (0px, 121px, 0px, -121px, 11px, 19px, 81px, 814px, '../images/sprite.png', 'link-ico', );
 $lock-name: 'lock';
 $lock-x: 0px;
-$lock-y: 121px;
+$lock-y: 145px;
 $lock-offset-x: 0px;
-$lock-offset-y: -121px;
+$lock-offset-y: -145px;
 $lock-width: 9px;
 $lock-height: 14px;
-$lock-total-width: 54px;
-$lock-total-height: 207px;
+$lock-total-width: 81px;
+$lock-total-height: 814px;
 $lock-image: '../images/sprite.png';
-$lock: (0px, 121px, 0px, -121px, 9px, 14px, 54px, 207px, '../images/sprite.png', 'lock', );
+$lock: (0px, 145px, 0px, -145px, 9px, 14px, 81px, 814px, '../images/sprite.png', 'lock', );
+$map-link-w-name: 'map-link-w';
+$map-link-w-x: 0px;
+$map-link-w-y: 164px;
+$map-link-w-offset-x: 0px;
+$map-link-w-offset-y: -164px;
+$map-link-w-width: 49px;
+$map-link-w-height: 45px;
+$map-link-w-total-width: 81px;
+$map-link-w-total-height: 814px;
+$map-link-w-image: '../images/sprite.png';
+$map-link-w: (0px, 164px, 0px, -164px, 49px, 45px, 81px, 814px, '../images/sprite.png', 'map-link-w', );
 $map-link-name: 'map-link';
 $map-link-x: 0px;
-$map-link-y: 140px;
+$map-link-y: 214px;
 $map-link-offset-x: 0px;
-$map-link-offset-y: -140px;
+$map-link-offset-y: -214px;
 $map-link-width: 49px;
 $map-link-height: 45px;
-$map-link-total-width: 54px;
-$map-link-total-height: 207px;
+$map-link-total-width: 81px;
+$map-link-total-height: 814px;
 $map-link-image: '../images/sprite.png';
-$map-link: (0px, 140px, 0px, -140px, 49px, 45px, 54px, 207px, '../images/sprite.png', 'map-link', );
+$map-link: (0px, 214px, 0px, -214px, 49px, 45px, 81px, 814px, '../images/sprite.png', 'map-link', );
+$mark-map-1-name: 'mark-map-1';
+$mark-map-1-x: 0px;
+$mark-map-1-y: 264px;
+$mark-map-1-offset-x: 0px;
+$mark-map-1-offset-y: -264px;
+$mark-map-1-width: 39px;
+$mark-map-1-height: 53px;
+$mark-map-1-total-width: 81px;
+$mark-map-1-total-height: 814px;
+$mark-map-1-image: '../images/sprite.png';
+$mark-map-1: (0px, 264px, 0px, -264px, 39px, 53px, 81px, 814px, '../images/sprite.png', 'mark-map-1', );
+$mark-map-2-name: 'mark-map-2';
+$mark-map-2-x: 0px;
+$mark-map-2-y: 322px;
+$mark-map-2-offset-x: 0px;
+$mark-map-2-offset-y: -322px;
+$mark-map-2-width: 53px;
+$mark-map-2-height: 73px;
+$mark-map-2-total-width: 81px;
+$mark-map-2-total-height: 814px;
+$mark-map-2-image: '../images/sprite.png';
+$mark-map-2: (0px, 322px, 0px, -322px, 53px, 73px, 81px, 814px, '../images/sprite.png', 'mark-map-2', );
+$mark-map-3-name: 'mark-map-3';
+$mark-map-3-x: 0px;
+$mark-map-3-y: 400px;
+$mark-map-3-offset-x: 0px;
+$mark-map-3-offset-y: -400px;
+$mark-map-3-width: 81px;
+$mark-map-3-height: 128px;
+$mark-map-3-total-width: 81px;
+$mark-map-3-total-height: 814px;
+$mark-map-3-image: '../images/sprite.png';
+$mark-map-3: (0px, 400px, 0px, -400px, 81px, 128px, 81px, 814px, '../images/sprite.png', 'mark-map-3', );
+$nav-asid-icon-1-name: 'nav-asid-icon-1';
+$nav-asid-icon-1-x: 0px;
+$nav-asid-icon-1-y: 533px;
+$nav-asid-icon-1-offset-x: 0px;
+$nav-asid-icon-1-offset-y: -533px;
+$nav-asid-icon-1-width: 63px;
+$nav-asid-icon-1-height: 61px;
+$nav-asid-icon-1-total-width: 81px;
+$nav-asid-icon-1-total-height: 814px;
+$nav-asid-icon-1-image: '../images/sprite.png';
+$nav-asid-icon-1: (0px, 533px, 0px, -533px, 63px, 61px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-1', );
+$nav-asid-icon-2-name: 'nav-asid-icon-2';
+$nav-asid-icon-2-x: 0px;
+$nav-asid-icon-2-y: 599px;
+$nav-asid-icon-2-offset-x: 0px;
+$nav-asid-icon-2-offset-y: -599px;
+$nav-asid-icon-2-width: 58px;
+$nav-asid-icon-2-height: 52px;
+$nav-asid-icon-2-total-width: 81px;
+$nav-asid-icon-2-total-height: 814px;
+$nav-asid-icon-2-image: '../images/sprite.png';
+$nav-asid-icon-2: (0px, 599px, 0px, -599px, 58px, 52px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-2', );
+$nav-asid-icon-3-name: 'nav-asid-icon-3';
+$nav-asid-icon-3-x: 0px;
+$nav-asid-icon-3-y: 656px;
+$nav-asid-icon-3-offset-x: 0px;
+$nav-asid-icon-3-offset-y: -656px;
+$nav-asid-icon-3-width: 67px;
+$nav-asid-icon-3-height: 67px;
+$nav-asid-icon-3-total-width: 81px;
+$nav-asid-icon-3-total-height: 814px;
+$nav-asid-icon-3-image: '../images/sprite.png';
+$nav-asid-icon-3: (0px, 656px, 0px, -656px, 67px, 67px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-3', );
+$nav-asid-icon-4-name: 'nav-asid-icon-4';
+$nav-asid-icon-4-x: 0px;
+$nav-asid-icon-4-y: 728px;
+$nav-asid-icon-4-offset-x: 0px;
+$nav-asid-icon-4-offset-y: -728px;
+$nav-asid-icon-4-width: 63px;
+$nav-asid-icon-4-height: 64px;
+$nav-asid-icon-4-total-width: 81px;
+$nav-asid-icon-4-total-height: 814px;
+$nav-asid-icon-4-image: '../images/sprite.png';
+$nav-asid-icon-4: (0px, 728px, 0px, -728px, 63px, 64px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-4', );
 $phone-name: 'phone';
 $phone-x: 0px;
-$phone-y: 190px;
+$phone-y: 797px;
 $phone-offset-x: 0px;
-$phone-offset-y: -190px;
+$phone-offset-y: -797px;
 $phone-width: 11px;
 $phone-height: 17px;
-$phone-total-width: 54px;
-$phone-total-height: 207px;
+$phone-total-width: 81px;
+$phone-total-height: 814px;
 $phone-image: '../images/sprite.png';
-$phone: (0px, 190px, 0px, -190px, 11px, 17px, 54px, 207px, '../images/sprite.png', 'phone', );
-$spritesheet-width: 54px;
-$spritesheet-height: 207px;
+$phone: (0px, 797px, 0px, -797px, 11px, 17px, 81px, 814px, '../images/sprite.png', 'phone', );
+$spritesheet-width: 81px;
+$spritesheet-height: 814px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($bx-pager-link-hover, $bx-pager-link, $company-icon, $lock, $map-link, $phone, );
-$spritesheet: (54px, 207px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($bx-pager-link-hover, $bx-pager-link, $company-icon, $link-ico, $lock, $map-link-w, $map-link, $mark-map-1, $mark-map-2, $mark-map-3, $nav-asid-icon-1, $nav-asid-icon-2, $nav-asid-icon-3, $nav-asid-icon-4, $phone, );
+$spritesheet: (81px, 814px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
