--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,6 +1,8 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery.bxslider.min.js"></script>
+  <script src="js/jquery.formstyler.min.js"></script>
+  <script src="js/ion.rangeSlider.min.js"></script>
   <script src="js/script.js"></script>
 
 </body>
