--- a/src/style/partials/sprite.scss
+++ b/src/style/partials/sprite.scss
@@ -11,176 +11,198 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
+$burger-mob-name: 'burger-mob';
+$burger-mob-x: 0px;
+$burger-mob-y: 0px;
+$burger-mob-offset-x: 0px;
+$burger-mob-offset-y: 0px;
+$burger-mob-width: 23px;
+$burger-mob-height: 15px;
+$burger-mob-total-width: 81px;
+$burger-mob-total-height: 854px;
+$burger-mob-image: '../images/sprite.png';
+$burger-mob: (0px, 0px, 0px, 0px, 23px, 15px, 81px, 854px, '../images/sprite.png', 'burger-mob', );
+$burger-name: 'burger';
+$burger-x: 0px;
+$burger-y: 20px;
+$burger-offset-x: 0px;
+$burger-offset-y: -20px;
+$burger-width: 23px;
+$burger-height: 15px;
+$burger-total-width: 81px;
+$burger-total-height: 854px;
+$burger-image: '../images/sprite.png';
+$burger: (0px, 20px, 0px, -20px, 23px, 15px, 81px, 854px, '../images/sprite.png', 'burger', );
 $bx-pager-link-hover-name: 'bx-pager-link-hover';
 $bx-pager-link-hover-x: 0px;
-$bx-pager-link-hover-y: 0px;
+$bx-pager-link-hover-y: 40px;
 $bx-pager-link-hover-offset-x: 0px;
-$bx-pager-link-hover-offset-y: 0px;
+$bx-pager-link-hover-offset-y: -40px;
 $bx-pager-link-hover-width: 20px;
 $bx-pager-link-hover-height: 20px;
 $bx-pager-link-hover-total-width: 81px;
-$bx-pager-link-hover-total-height: 814px;
+$bx-pager-link-hover-total-height: 854px;
 $bx-pager-link-hover-image: '../images/sprite.png';
-$bx-pager-link-hover: (0px, 0px, 0px, 0px, 20px, 20px, 81px, 814px, '../images/sprite.png', 'bx-pager-link-hover', );
+$bx-pager-link-hover: (0px, 40px, 0px, -40px, 20px, 20px, 81px, 854px, '../images/sprite.png', 'bx-pager-link-hover', );
 $bx-pager-link-name: 'bx-pager-link';
 $bx-pager-link-x: 0px;
-$bx-pager-link-y: 25px;
+$bx-pager-link-y: 65px;
 $bx-pager-link-offset-x: 0px;
-$bx-pager-link-offset-y: -25px;
+$bx-pager-link-offset-y: -65px;
 $bx-pager-link-width: 20px;
 $bx-pager-link-height: 20px;
 $bx-pager-link-total-width: 81px;
-$bx-pager-link-total-height: 814px;
+$bx-pager-link-total-height: 854px;
 $bx-pager-link-image: '../images/sprite.png';
-$bx-pager-link: (0px, 25px, 0px, -25px, 20px, 20px, 81px, 814px, '../images/sprite.png', 'bx-pager-link', );
+$bx-pager-link: (0px, 65px, 0px, -65px, 20px, 20px, 81px, 854px, '../images/sprite.png', 'bx-pager-link', );
 $company-icon-name: 'company-icon';
 $company-icon-x: 0px;
-$company-icon-y: 50px;
+$company-icon-y: 90px;
 $company-icon-offset-x: 0px;
-$company-icon-offset-y: -50px;
+$company-icon-offset-y: -90px;
 $company-icon-width: 54px;
 $company-icon-height: 66px;
 $company-icon-total-width: 81px;
-$company-icon-total-height: 814px;
+$company-icon-total-height: 854px;
 $company-icon-image: '../images/sprite.png';
-$company-icon: (0px, 50px, 0px, -50px, 54px, 66px, 81px, 814px, '../images/sprite.png', 'company-icon', );
+$company-icon: (0px, 90px, 0px, -90px, 54px, 66px, 81px, 854px, '../images/sprite.png', 'company-icon', );
 $link-ico-name: 'link-ico';
 $link-ico-x: 0px;
-$link-ico-y: 121px;
+$link-ico-y: 161px;
 $link-ico-offset-x: 0px;
-$link-ico-offset-y: -121px;
+$link-ico-offset-y: -161px;
 $link-ico-width: 11px;
 $link-ico-height: 19px;
 $link-ico-total-width: 81px;
-$link-ico-total-height: 814px;
+$link-ico-total-height: 854px;
 $link-ico-image: '../images/sprite.png';
-$link-ico: (0px, 121px, 0px, -121px, 11px, 19px, 81px, 814px, '../images/sprite.png', 'link-ico', );
+$link-ico: (0px, 161px, 0px, -161px, 11px, 19px, 81px, 854px, '../images/sprite.png', 'link-ico', );
 $lock-name: 'lock';
 $lock-x: 0px;
-$lock-y: 145px;
+$lock-y: 185px;
 $lock-offset-x: 0px;
-$lock-offset-y: -145px;
+$lock-offset-y: -185px;
 $lock-width: 9px;
 $lock-height: 14px;
 $lock-total-width: 81px;
-$lock-total-height: 814px;
+$lock-total-height: 854px;
 $lock-image: '../images/sprite.png';
-$lock: (0px, 145px, 0px, -145px, 9px, 14px, 81px, 814px, '../images/sprite.png', 'lock', );
+$lock: (0px, 185px, 0px, -185px, 9px, 14px, 81px, 854px, '../images/sprite.png', 'lock', );
 $map-link-w-name: 'map-link-w';
 $map-link-w-x: 0px;
-$map-link-w-y: 164px;
+$map-link-w-y: 204px;
 $map-link-w-offset-x: 0px;
-$map-link-w-offset-y: -164px;
+$map-link-w-offset-y: -204px;
 $map-link-w-width: 49px;
 $map-link-w-height: 45px;
 $map-link-w-total-width: 81px;
-$map-link-w-total-height: 814px;
+$map-link-w-total-height: 854px;
 $map-link-w-image: '../images/sprite.png';
-$map-link-w: (0px, 164px, 0px, -164px, 49px, 45px, 81px, 814px, '../images/sprite.png', 'map-link-w', );
+$map-link-w: (0px, 204px, 0px, -204px, 49px, 45px, 81px, 854px, '../images/sprite.png', 'map-link-w', );
 $map-link-name: 'map-link';
 $map-link-x: 0px;
-$map-link-y: 214px;
+$map-link-y: 254px;
 $map-link-offset-x: 0px;
-$map-link-offset-y: -214px;
+$map-link-offset-y: -254px;
 $map-link-width: 49px;
 $map-link-height: 45px;
 $map-link-total-width: 81px;
-$map-link-total-height: 814px;
+$map-link-total-height: 854px;
 $map-link-image: '../images/sprite.png';
-$map-link: (0px, 214px, 0px, -214px, 49px, 45px, 81px, 814px, '../images/sprite.png', 'map-link', );
+$map-link: (0px, 254px, 0px, -254px, 49px, 45px, 81px, 854px, '../images/sprite.png', 'map-link', );
 $mark-map-1-name: 'mark-map-1';
 $mark-map-1-x: 0px;
-$mark-map-1-y: 264px;
+$mark-map-1-y: 304px;
 $mark-map-1-offset-x: 0px;
-$mark-map-1-offset-y: -264px;
+$mark-map-1-offset-y: -304px;
 $mark-map-1-width: 39px;
 $mark-map-1-height: 53px;
 $mark-map-1-total-width: 81px;
-$mark-map-1-total-height: 814px;
+$mark-map-1-total-height: 854px;
 $mark-map-1-image: '../images/sprite.png';
-$mark-map-1: (0px, 264px, 0px, -264px, 39px, 53px, 81px, 814px, '../images/sprite.png', 'mark-map-1', );
+$mark-map-1: (0px, 304px, 0px, -304px, 39px, 53px, 81px, 854px, '../images/sprite.png', 'mark-map-1', );
 $mark-map-2-name: 'mark-map-2';
 $mark-map-2-x: 0px;
-$mark-map-2-y: 322px;
+$mark-map-2-y: 362px;
 $mark-map-2-offset-x: 0px;
-$mark-map-2-offset-y: -322px;
+$mark-map-2-offset-y: -362px;
 $mark-map-2-width: 53px;
 $mark-map-2-height: 73px;
 $mark-map-2-total-width: 81px;
-$mark-map-2-total-height: 814px;
+$mark-map-2-total-height: 854px;
 $mark-map-2-image: '../images/sprite.png';
-$mark-map-2: (0px, 322px, 0px, -322px, 53px, 73px, 81px, 814px, '../images/sprite.png', 'mark-map-2', );
+$mark-map-2: (0px, 362px, 0px, -362px, 53px, 73px, 81px, 854px, '../images/sprite.png', 'mark-map-2', );
 $mark-map-3-name: 'mark-map-3';
 $mark-map-3-x: 0px;
-$mark-map-3-y: 400px;
+$mark-map-3-y: 440px;
 $mark-map-3-offset-x: 0px;
-$mark-map-3-offset-y: -400px;
+$mark-map-3-offset-y: -440px;
 $mark-map-3-width: 81px;
 $mark-map-3-height: 128px;
 $mark-map-3-total-width: 81px;
-$mark-map-3-total-height: 814px;
+$mark-map-3-total-height: 854px;
 $mark-map-3-image: '../images/sprite.png';
-$mark-map-3: (0px, 400px, 0px, -400px, 81px, 128px, 81px, 814px, '../images/sprite.png', 'mark-map-3', );
+$mark-map-3: (0px, 440px, 0px, -440px, 81px, 128px, 81px, 854px, '../images/sprite.png', 'mark-map-3', );
 $nav-asid-icon-1-name: 'nav-asid-icon-1';
 $nav-asid-icon-1-x: 0px;
-$nav-asid-icon-1-y: 533px;
+$nav-asid-icon-1-y: 573px;
 $nav-asid-icon-1-offset-x: 0px;
-$nav-asid-icon-1-offset-y: -533px;
+$nav-asid-icon-1-offset-y: -573px;
 $nav-asid-icon-1-width: 63px;
 $nav-asid-icon-1-height: 61px;
 $nav-asid-icon-1-total-width: 81px;
-$nav-asid-icon-1-total-height: 814px;
+$nav-asid-icon-1-total-height: 854px;
 $nav-asid-icon-1-image: '../images/sprite.png';
-$nav-asid-icon-1: (0px, 533px, 0px, -533px, 63px, 61px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-1', );
+$nav-asid-icon-1: (0px, 573px, 0px, -573px, 63px, 61px, 81px, 854px, '../images/sprite.png', 'nav-asid-icon-1', );
 $nav-asid-icon-2-name: 'nav-asid-icon-2';
 $nav-asid-icon-2-x: 0px;
-$nav-asid-icon-2-y: 599px;
+$nav-asid-icon-2-y: 639px;
 $nav-asid-icon-2-offset-x: 0px;
-$nav-asid-icon-2-offset-y: -599px;
+$nav-asid-icon-2-offset-y: -639px;
 $nav-asid-icon-2-width: 58px;
 $nav-asid-icon-2-height: 52px;
 $nav-asid-icon-2-total-width: 81px;
-$nav-asid-icon-2-total-height: 814px;
+$nav-asid-icon-2-total-height: 854px;
 $nav-asid-icon-2-image: '../images/sprite.png';
-$nav-asid-icon-2: (0px, 599px, 0px, -599px, 58px, 52px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-2', );
+$nav-asid-icon-2: (0px, 639px, 0px, -639px, 58px, 52px, 81px, 854px, '../images/sprite.png', 'nav-asid-icon-2', );
 $nav-asid-icon-3-name: 'nav-asid-icon-3';
 $nav-asid-icon-3-x: 0px;
-$nav-asid-icon-3-y: 656px;
+$nav-asid-icon-3-y: 696px;
 $nav-asid-icon-3-offset-x: 0px;
-$nav-asid-icon-3-offset-y: -656px;
+$nav-asid-icon-3-offset-y: -696px;
 $nav-asid-icon-3-width: 67px;
 $nav-asid-icon-3-height: 67px;
 $nav-asid-icon-3-total-width: 81px;
-$nav-asid-icon-3-total-height: 814px;
+$nav-asid-icon-3-total-height: 854px;
 $nav-asid-icon-3-image: '../images/sprite.png';
-$nav-asid-icon-3: (0px, 656px, 0px, -656px, 67px, 67px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-3', );
+$nav-asid-icon-3: (0px, 696px, 0px, -696px, 67px, 67px, 81px, 854px, '../images/sprite.png', 'nav-asid-icon-3', );
 $nav-asid-icon-4-name: 'nav-asid-icon-4';
 $nav-asid-icon-4-x: 0px;
-$nav-asid-icon-4-y: 728px;
+$nav-asid-icon-4-y: 768px;
 $nav-asid-icon-4-offset-x: 0px;
-$nav-asid-icon-4-offset-y: -728px;
+$nav-asid-icon-4-offset-y: -768px;
 $nav-asid-icon-4-width: 63px;
 $nav-asid-icon-4-height: 64px;
 $nav-asid-icon-4-total-width: 81px;
-$nav-asid-icon-4-total-height: 814px;
+$nav-asid-icon-4-total-height: 854px;
 $nav-asid-icon-4-image: '../images/sprite.png';
-$nav-asid-icon-4: (0px, 728px, 0px, -728px, 63px, 64px, 81px, 814px, '../images/sprite.png', 'nav-asid-icon-4', );
+$nav-asid-icon-4: (0px, 768px, 0px, -768px, 63px, 64px, 81px, 854px, '../images/sprite.png', 'nav-asid-icon-4', );
 $phone-name: 'phone';
 $phone-x: 0px;
-$phone-y: 797px;
+$phone-y: 837px;
 $phone-offset-x: 0px;
-$phone-offset-y: -797px;
+$phone-offset-y: -837px;
 $phone-width: 11px;
 $phone-height: 17px;
 $phone-total-width: 81px;
-$phone-total-height: 814px;
+$phone-total-height: 854px;
 $phone-image: '../images/sprite.png';
-$phone: (0px, 797px, 0px, -797px, 11px, 17px, 81px, 814px, '../images/sprite.png', 'phone', );
+$phone: (0px, 837px, 0px, -837px, 11px, 17px, 81px, 854px, '../images/sprite.png', 'phone', );
 $spritesheet-width: 81px;
-$spritesheet-height: 814px;
+$spritesheet-height: 854px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($bx-pager-link-hover, $bx-pager-link, $company-icon, $link-ico, $lock, $map-link-w, $map-link, $mark-map-1, $mark-map-2, $mark-map-3, $nav-asid-icon-1, $nav-asid-icon-2, $nav-asid-icon-3, $nav-asid-icon-4, $phone, );
-$spritesheet: (81px, 814px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($burger-mob, $burger, $bx-pager-link-hover, $bx-pager-link, $company-icon, $link-ico, $lock, $map-link-w, $map-link, $mark-map-1, $mark-map-2, $mark-map-3, $nav-asid-icon-1, $nav-asid-icon-2, $nav-asid-icon-3, $nav-asid-icon-4, $phone, );
+$spritesheet: (81px, 854px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
