--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,6 +4,7 @@
 
 body{
   background-color: #f9f9f9;
+  margin: 0;
 }
 .wrapper{
   max-width: 1200px;
@@ -82,10 +83,71 @@ header{
     font-family: 'PT Sans Narrow', sans-serif;
     text-decoration: none;
   }
+  .butt-nav{
+    display: none;
+  }
+}
+.mobail-nav-header{
+  display: none;
+  padding: 0!important;
 }
 
 
+.phon-tel-mob{
+  display: none;
+  float: right;
+  width: 13%;
+  padding: 20px 0 0;
+  ul{
+    padding: 0;
+  }
+  li{
+    display: inline-block;
+    margin: 0 10px;
+    &:last-child{
+      margin: 0 0 0 7px;
+    }
+  }
+  a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    text-decoration: none;
+    i{
+      vertical-align: middle;
+    }
+  }
+  .butt-mob-nav{
+    border: none;
+    width: 96px;
+    display: none;
+  }
+}
 
+.butt-nav{
+  display: none;
+  color: #fff!important;
+  font-size: rem(16);
+  text-transform: uppercase;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-weight: bold;
+  background-color: #436db9;
+  text-decoration: none;
+  vertical-align: middle;
+  display: inline-block;
+  line-height: 38px;
+  border-radius: 20px;
+  width: 115px;
+  text-align: center;
+  i{
+    vertical-align: middle;
+    margin: -3px 5px 0 0;
+  }
+}
 
 
 
@@ -272,11 +334,15 @@ header{
   padding: 10px 0 52px;
 }
 .company-item{
+  position: relative;
   width: 202px;
   height: 202px;
   margin: 0 20px;
   display: inline-block;
-  border-radius: 50%;
+  -webkit-border-radius: 100px;
+  -o-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
   background-color: #fff;
   position: relative;
   text-align: center;
@@ -296,10 +362,15 @@ header{
   img{
     vertical-align: middle;
   }
+  
   a{
     position: absolute;
     width: 100%;
     height: 100%;
+    -webkit-border-radius: 100px;
+    -o-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
     top: 0;
     left: 0;
     display: inline-block;
@@ -356,15 +427,77 @@ header{
 }
 
 
-
+/////////////// карта //////////////
 .box-map-city{
   position: relative;
   width: 100%;
   padding: 0 0 60px;
+  height: 543px;
+  &:before{
+    content: '';
+    display: block;
+    background: url('../images/map-top.png') 0 0 no-repeat;
+    width: 1459px;
+    height: 81px;
+    position: absolute;
+    top: 0;
+    left: -30px;
+    z-index: 1;
+  }
+  &:after{
+    content: '';
+    display: block;
+    background: url('../images/map-bottom.png') 0 0 no-repeat;
+    width: 1459px;
+    height: 121px;
+    position: absolute;
+    bottom: 0;
+    left: -32px;
+    z-index:1;
+  }
   img{
     width: 100%;
   }
 }
+.map-mask{
+  padding: 21px 0 30px;
+  width: 1390px;
+  position: relative;
+  left: -92px;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  &:before{
+    content: '';
+    display: block;
+    background: url('../images/map-right.png') 0 0 no-repeat;
+    width: 216px;
+    height: 348px;
+    position: absolute;
+    top: 100px;
+    right: -39px;
+    z-index: 5;
+  }
+  &:after{
+    content: '';
+    display: block;
+    background: url('../images/map-left.png') 0 0 no-repeat;
+    width: 205px;
+    height: 348px;
+    position: absolute;
+    top: 100px;
+    left: -27px;
+    z-index: 5;
+  }
+}
+#map{
+  position: relative;
+  z-index: 0;
+  width: 1395px!important;
+  height: 543px!important;
+
+}
+/////////////// карта //////////////
 .mark-map-3{
   color: #fff;
   font-family: 'PT Sans Narrow', sans-serif;
@@ -380,17 +513,17 @@ header{
 
 .mark-1{
   position: absolute;
-  top: 20px;
+  top: 35%;
   left: 20%;
 }
 .mark-2{
   position: absolute;
-  top: 30px;
+  top: 30%;
   left: 30%;
 }
 .mark-3{
   position: absolute;
-  top: 40px;
+  top: 20%;
   left: 40%;
 }
 
@@ -433,6 +566,7 @@ header{
 .slid-input{
   width: 160px;
   display: block;
+  position: relative;
 }
 
 
@@ -602,7 +736,7 @@ header{
   position: relative;
   top: 170px;
   left: 0;
-  padding: 30px;
+  padding: 28px;
   z-index: 99;
   &.fixed{
     position: fixed;
@@ -667,6 +801,22 @@ footer{
       padding: 0 36px;
     }
   }
+}
+.but-nav-footer{
+  display: none;
+  color: #fff!important;
+  font-size: rem(16);
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 105px;
+  line-height: 37px;
+  background-color: #325594;
+  border-radius: 20px;
+  text-align: center;
+  padding: 0;
+  text-decoration: none;
+
 }
 
 
